<resources>
    <string name="app_name">FinanceApp</string>
    <string name="title_home">Início</string>
    <string name="title_carteira">Carteira</string>
    <string name="title_cartao">Cartões</string>
    <string name="title_lanc_carteira">Novo Lanç.</string>
    <string name="title_orc_carteira">Orçamento.</string>
    <string name="title_cartao_pagar">Pagar.</string>
    <string name="title_del_lanc_carteira">Apagar Lanç.</string>
    <string name="placeholder">placeholder</string>
    <string name="pagoplaceholder">PAGO</string>
    <string name="money_placeholder">10000</string>
    <string name="month_placeholder">AGOSTO</string>
    <string name="year_placeholder">2019</string>
    <string name="descricao_placeholder">descrição</string>
    <string name="diafechamento_placeholder">dia de fechamento</string>
    <string name="limite_placeholder">limite</string>
    <string name="bandeira_novocartao_placeholder">bandeira</string>
    <string name="ultimosdigitos_placeholder">1234</string>
    <string name="titulo_placeholder">título</string>
    <string name="valor_placeholder">R$0,00</string>
    <string name="quantidade_parcelas_placeholder">quantidade de parcelas</string>
    <string name="data_placeholder">dia/mes/ano</string>
    <string name="orcamento_placeholder">0,00</string>
    <string name="gerenciar_orcamento">Alterar orçamento</string>
    <string name="gerenciar_orcamento_sub">gerêncie o valor do orçamento do mês</string>
    <string name="btn_salvar">Salvar</string>
    <string name="btn_pagar">Pagar</string>
    <string name="gerenciar_orcamento_text">Insira o valor do orçamento para editar, depois clique em salvar para realizar a alteração.</string>
    <string name="gerenciar_fatura_text">Insira o valor que deseja marcar como pago. Se o valor não for total, será criado um novo lançamento na próxima fatura com o saldo restante. Caso o valor do pagamento seja maior que o valor da fatura, será considerado o valor total da fatura como pagamento.</string>
    <string name="novo_lancamento_subtitle">Adicionar novo lançamento.</string>
    <string name="novo_cartao_title">Adicionar novo cartão.</string>
    <string name="preencha_tudo">Por favor preencha todos os campos.</string>
    <string name="app_img_content_description">Logomarca do aplicativo.</string>
    <string name="balanco">balanço</string>
    <string name="numero_cartao">1234</string>
    <string name="bandeira_placeholder">VISA</string>
    <string name="fechamento">fechamento dia</string>
    <string name="underline_placeholder">__</string>
    <string name="numero_cartao_placeholder">últimos dígitos do cartão</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
