<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="30dp"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:text="@string/novo_lancamento_subtitle"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_marginBottom="50dp"
        android:textAlignment="center"
        android:text="@string/preencha_tudo"/>

    <EditText
        android:id="@+id/et_lancamento_descricao"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/rounded_edittext"
        android:textCursorDrawable="@drawable/edit_text_cursor"
        android:textSize="22sp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:hint="@string/descricao_placeholder"
        android:inputType="text"
        android:autofillHints="@string/descricao_placeholder"/>

    <com.viictrp.financeapp.ui.custom.CurrencyEditText
        android:id="@+id/et_lancamento_valor"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/valor_placeholder"
        android:autofillHints="@string/valor_placeholder"
        android:inputType="numberDecimal"
        android:textCursorDrawable="@drawable/edit_text_cursor"
        android:textSize="22sp"
        android:layout_marginTop="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        app:groupDivider="."
        app:monetaryDivider="," />

    <EditText
        android:id="@+id/et_lancamento_data"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/data_placeholder"
        android:autofillHints="@string/data_placeholder"
        android:inputType="date"
        android:textCursorDrawable="@drawable/edit_text_cursor"
        android:textSize="22sp"
        android:layout_marginTop="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"/>

    <EditText
        android:id="@+id/et_lancamento_qt_parcelas"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/quantidade_parcelas_placeholder"
        android:autofillHints="@string/quantidade_parcelas_placeholder"
        android:inputType="number"
        android:textCursorDrawable="@drawable/edit_text_cursor"
        android:textSize="22sp"
        android:layout_marginTop="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_salvar"
        android:transitionName="btn_salvar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/placeholder"
                android:src="@drawable/ic_coins_solid"
                android:tint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_salvar"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>

