<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/novo_cartao_title"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:text="@string/preencha_tudo"
            android:textAlignment="center"
            android:textSize="15sp" />

        <androidx.cardview.widget.CardView
            android:transitionName="cv_novo_cartao_credito"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/round"
            android:elevation="20dp"
            app:cardCornerRadius="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/creditCardBg">

                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="40dp"
                    android:background="@color/labelTintColorAccent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/dots_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="20dp"
                    android:contentDescription="@string/placeholder"
                    android:src="@drawable/ic_four_dots_horizontally_aligned_as_a_line_48"
                    android:tint="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageView
                    android:id="@+id/dots_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:contentDescription="@string/placeholder"
                    android:src="@drawable/ic_four_dots_horizontally_aligned_as_a_line_48"
                    android:tint="@color/white"
                    app:layout_constraintBottom_toBottomOf="@+id/dots_1"
                    app:layout_constraintStart_toEndOf="@+id/dots_1" />

                <ImageView
                    android:id="@+id/dots_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:contentDescription="@string/placeholder"
                    android:src="@drawable/ic_four_dots_horizontally_aligned_as_a_line_48"
                    android:tint="@color/white"
                    app:layout_constraintBottom_toBottomOf="@+id/dots_2"
                    app:layout_constraintStart_toEndOf="@+id/dots_2" />

                <TextView
                    android:id="@+id/tx_numero_cartao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/numero_cartao"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    app:layout_constraintBottom_toBottomOf="@+id/dots_3"
                    app:layout_constraintStart_toEndOf="@+id/dots_3"
                    app:layout_constraintTop_toTopOf="@+id/dots_3" />

                <TextView
                    android:id="@+id/lb_valor_fatura"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/balanco"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toTopOf="@+id/view"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tx_valor_fatura"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/orcamento_placeholder"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    app:layout_constraintBottom_toBottomOf="@+id/view"
                    app:layout_constraintStart_toStartOf="@+id/lb_valor_fatura"
                    app:layout_constraintTop_toTopOf="@+id/view" />

                <TextView
                    android:id="@+id/tx_cartao_bandeira"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:text="@string/bandeira_placeholder"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    app:layout_constraintBottom_toTopOf="@+id/view"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/lb_fechamento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/fechamento"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toTopOf="@+id/dots_1"
                    app:layout_constraintStart_toStartOf="@+id/dots_1" />

                <TextView
                    android:id="@+id/tx_fechamento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/fechamento_dia"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="@+id/lb_fechamento"
                    app:layout_constraintStart_toEndOf="@+id/lb_fechamento"
                    app:layout_constraintTop_toTopOf="@+id/lb_fechamento" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <EditText
            android:id="@+id/et_descricao_novo_cartao"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:autofillHints="@string/descricao_placeholder"
            android:background="@drawable/rounded_edittext"
            android:drawableStart="@drawable/ic_align_to_left_24"
            android:drawablePadding="20dp"
            android:drawableTint="@color/navigationTint"
            android:hint="@string/descricao_placeholder"
            android:inputType="text"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:textCursorDrawable="@drawable/edit_text_cursor"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/et_dia_fechamento"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:autofillHints="@string/diafechamento_placeholder"
            android:background="@drawable/rounded_edittext"
            android:drawableStart="@drawable/ic_align_to_left_24"
            android:drawablePadding="20dp"
            android:drawableTint="@color/navigationTint"
            android:hint="@string/diafechamento_placeholder"
            android:inputType="text"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:textCursorDrawable="@drawable/edit_text_cursor"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/et_bandeira_novo_cartao"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:autofillHints="@string/bandeira_placeholder"
            android:background="@drawable/rounded_edittext"
            android:drawableStart="@drawable/ic_align_to_left_24"
            android:drawablePadding="20dp"
            android:drawableTint="@color/navigationTint"
            android:hint="@string/bandeira_novocartao_placeholder"
            android:inputType="text"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:textCursorDrawable="@drawable/edit_text_cursor"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/et_limite"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:autofillHints="@string/limite_placeholder"
            android:background="@drawable/rounded_edittext"
            android:drawableStart="@drawable/ic_align_to_left_24"
            android:drawablePadding="20dp"
            android:drawableTint="@color/navigationTint"
            android:hint="@string/limite_placeholder"
            android:inputType="text"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:textCursorDrawable="@drawable/edit_text_cursor"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/et_ultimos_digitos"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:autofillHints="@string/ultimosdigitos_placeholder"
            android:background="@drawable/rounded_edittext"
            android:drawableStart="@drawable/calendar_24"
            android:drawablePadding="20dp"
            android:drawableTint="@color/navigationTint"
            android:hint="@string/ultimosdigitos_placeholder"
            android:inputType="date"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:textCursorDrawable="@drawable/edit_text_cursor"
            android:textSize="22sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_salvar_novo_cartao"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:transitionName="btn_salvar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="20dp"
                    android:contentDescription="@string/placeholder"
                    android:src="@drawable/ic_coins_solid"
                    android:tint="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/textView2"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_salvar"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>

