<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="30dp"
    tools:context=".ui.orcamento.GerenciarOrcamento">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/gerenciar_orcamento_text"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.viictrp.financeapp.ui.custom.CurrencyEditText
        android:id="@+id/orcamentoInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:inputType="numberDecimal"
        app:groupDivider="."
        app:monetaryDivider=","
        android:textSize="30sp"
        android:text="@string/placeholder"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/btn_salvar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@color/colorPrimary"
        android:drawableStart="@drawable/ic_home_black_24dp"
        android:drawableTint="@color/white"
        android:text="@string/btn_salvar"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/orcamentoInput"
        app:layout_constraintStart_toStartOf="@+id/orcamentoInput"
        app:layout_constraintTop_toBottomOf="@+id/orcamentoInput" />

</androidx.constraintlayout.widget.ConstraintLayout>