<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <ImageButton
            android:id="@+id/previous_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/placeholder"
            android:padding="10dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/ic_arrow_left"
            android:text="@string/placeholder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/custom_calendar_tx_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:text="@string/year_placeholder"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/creditCardBg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/custom_calendar_tx_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:text="@string/month_placeholder"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/next_month"
            app:layout_constraintStart_toEndOf="@+id/previous_month"
            app:layout_constraintTop_toBottomOf="@+id/custom_calendar_tx_year" />

        <ImageButton
            android:id="@+id/next_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/placeholder"
            android:padding="10dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/ic_arrow_right_16"
            android:text="@string/placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</merge>